[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "webscraper"
version = "1.0.0"
description = "This project tries to implement an ML pipeline that does booking forecasting"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "S Chakraborty", email = "c.subhodeep@hotmail.com" }
]

maintainers = [
  {name = "DNL", email = "david.nielsen@tuicruises.com" }
]

[tool.setuptools]
package-dir = {"" = "."}
