[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "webscraper"
version = "1.0.0"
description = "This project contains the application code for the webscraper"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "S Chakraborty", email = "c.subhodeep@hotmail.com" }
]

maintainers = [
  {name = "DNL"}
]

[tool.setuptools]
package-dir = {"" = "."}
